--- a/.github/workflows/main_firstapp1-app.yml
+++ b/.github/workflows/main_firstapp1-app.yml
@@ -27,7 +27,11 @@ jobs:
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+      
+      - name: dotnetinstall ef
         run: dotnet tool install -g dotnet-ef
+      
+      -name: dotnet bundlemigration
         run: dotnet ef migrations bundle --runtime linux-x64 -p DotNetCoreSqlDb/DotNetCoreSqlDb.csproj -o ${{env.DOTNET_ROOT}}/myapp/migrate
 
       - name: Upload artifact for deployment job
